<!--  Copyright (c) 2024  Oracle and/or its affiliates.

      The Universal Permissive License (UPL), Version 1.0

      Subject to the condition set forth below, permission is hereby granted to any
      person obtaining a copy of this software, associated documentation and/or data
      (collectively the "Software"), free of charge and under any and all copyright
      rights in the Software, and any and all patent rights owned or freely
      licensable by each licensor hereunder covering either (i) the unmodified
      Software as contributed to or provided by such licensor, or (ii) the Larger
      Works (as defined below), to deal in both

      (a) the Software, and
      (b) any piece of software and/or hardware listed in the lrgrwrks.txt file if
      one is included with the Software (each a "Larger Work" to which the Software
      is contributed by such licensors),

      without restriction, including without limitation the rights to copy, create
      derivative works of, display, perform, and distribute the Software and make,
      use, sell, offer for sale, import, export, have made, and have sold the
      Software and the Larger Work(s), and to sublicense the foregoing rights on
      either these or other terms.

      This license is subject to the following condition:
      The above copyright notice and either this complete permission notice or at
      a minimum a reference to the UPL must be included in all copies or
      substantial portions of the Software.

      THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
      IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
      FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
      AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
      LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
      OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
      SOFTWARE. -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.sonatype.oss</groupId>
    <artifactId>oss-parent</artifactId>
    <version>7</version>
  </parent>

  <groupId>com.github.jnr</groupId>
  <artifactId>jnr-ffi</artifactId>
  <packaging>jar</packaging>
  <version>2.2.16-SNAPSHOT</version>
  <name>jnr-ffi</name>
  <description>A library for invoking native functions from java</description>
  <url>http://github.com/jnr/jnr-ffi</url>

  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <scm>
    <connection>scm:git:git@github.com:jnr/jnr-ffi.git</connection>
    <developerConnection>scm:git:git@github.com:jnr/jnr-ffi.git</developerConnection>
    <url>git@github.com:jnr/jnr-ffi.git</url>
    <tag>HEAD</tag>
  </scm>

  <developers>
    <developer>
      <id>wmeissner</id>
      <name>Wayne Meissner</name>
      <email>wmeissner@gmail.com</email>
    </developer>
    <developer>
      <id>headius</id>
      <name>Charles Oliver Nutter</name>
      <email>headius@headius.com</email>
    </developer>
  </developers>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>22</maven.compiler.release>
    <github.global.server>github</github.global.server>
    <asm.version>9.5</asm.version>
    <make>make</make>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>5.7.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.github.jnr</groupId>
      <artifactId>jffi</artifactId>
      <version>1.3.12</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>com.github.jnr</groupId>
      <artifactId>jffi</artifactId>
      <version>1.3.12</version>
      <scope>runtime</scope>
      <classifier>native</classifier>
    </dependency>
    <dependency>
      <groupId>org.ow2.asm</groupId>
      <artifactId>asm</artifactId>
      <version>${asm.version}</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.ow2.asm</groupId>
      <artifactId>asm-commons</artifactId>
      <version>${asm.version}</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.ow2.asm</groupId>
      <artifactId>asm-analysis</artifactId>
      <version>${asm.version}</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.ow2.asm</groupId>
      <artifactId>asm-tree</artifactId>
      <version>${asm.version}</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>org.ow2.asm</groupId>
      <artifactId>asm-util</artifactId>
      <version>${asm.version}</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>com.github.jnr</groupId>
      <artifactId>jnr-a64asm</artifactId>
      <version>1.0.0</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>com.github.jnr</groupId>
      <artifactId>jnr-x86asm</artifactId>
      <version>1.0.2</version>
      <scope>compile</scope>
    </dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>
        <configuration>
          <release>22</release>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-antrun-plugin</artifactId>
        <version>1.1</version>
        <executions>
          <execution>
            <phase>test-compile</phase>
            <configuration>
              <tasks>
                  <exec dir="${basedir}" executable="${make}" failonerror="true">
                  <arg line="-f libtest/GNUmakefile" />
                  <arg line="BUILD_DIR=${project.build.directory}" />
                  <arg line="CPU=${os.arch}" />
                </exec>
              </tasks>
            </configuration>
            <goals>
              <goal>run</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.felix</groupId>
        <artifactId>maven-bundle-plugin</artifactId>
        <version>5.1.4</version>
        <configuration>
          <instructions>
            <_nouses>true</_nouses>
          </instructions>
        </configuration>
        <executions>
          <execution>
            <id>bundle-manifest</id>
            <phase>process-classes</phase>
            <goals>
              <goal>manifest</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>2.3.1</version>
        <configuration>
          <archive>
            <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
            <manifestEntries>
              <Automatic-Module-Name>org.jnrproject.ffi</Automatic-Module-Name>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.2</version>
        <configuration>
          <forkCount>1</forkCount>
          <reuseForks>false</reuseForks>
          <argLine>--enable-native-access=ALL-UNNAMED -Djnr.ffi.compile.checks=true</argLine>
          <systemProperties combine.children="append">
            <property>
              <name>jnr.ffi.library.path</name>
              <value>${project.build.directory}</value>
            </property>
          </systemProperties>
        </configuration>
        <executions>
          <execution>
            <id>proxy implementation</id>
            <goals>
              <goal>test</goal>
            </goals>
            <configuration>
              <systemProperties>
                <property>
                  <name>jnr.ffi.asm.enabled</name>
                  <value>false</value>
                </property>
              </systemProperties>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>com.github.github</groupId>
        <artifactId>site-maven-plugin</artifactId>
        <version>0.6</version>
        <configuration>
          <message>Creating site for ${project.version}</message>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>site</goal>
            </goals>
            <phase>site</phase>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.4.0</version>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>2.2.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <!--
      <plugin>
        <groupId>org.sonatype.plugins</groupId>
        <artifactId>nexus-staging-maven-plugin</artifactId>
        <version>1.4.4</version>
        <extensions>true</extensions>
        <configuration>
          <serverId>sonatype-nexus-staging</serverId>
          <nexusUrl>https://oss.sonatype.org</nexusUrl>
        </configuration>
      </plugin>
      -->
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>linux-profile</id>
      <activation>
        <os><name>linux</name></os>
      </activation>
    </profile>
    <profile>
      <id>freebsd-profile</id>
      <activation>
        <os><name>freebsd</name></os>
      </activation>
      <properties>
        <make>gmake</make>
      </properties>
    </profile>
    <profile>
      <id>dragonfly-profile</id>
      <activation>
        <os><name>dragonflybsd</name></os>
      </activation>
      <properties>
        <make>gmake</make>
      </properties>
    </profile>
    <profile>
      <id>release-sign-artifacts</id>
      <activation>
        <property>
          <name>performRelease</name>
          <value>true</value>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>1.4</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>2.8</version>
        <configuration>
          <excludePackageNames>jnr.ffi.provider:jnr.ffi.util</excludePackageNames>
        </configuration>
      </plugin>
    </plugins>
  </reporting>
</project>
